# MSIanalyzer

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
examples/: example_marker.json
examples/fastq_example/: 9BQL96_2.fastq  9BQL96_3.fastq  9BQL96_3_500x.fastq  9BQL96_5.fastq  9BQL96_5_500x.fastq  BVSBWG_2.fastq  BVSBWG_3.fastq  BVSBWG_3_500x.fastq  BVSBWG_5.fastq  BVSBWG_5_500x.fastq  F5SHB2_3_500x.fastq  F5SHB2_5_500x.fastq  JQH95X_3_500x.fastq  JQH95X_5_500x.fastq  RQ4DWT_3_500x.fastq  RQ4DWT_5_500x.fastq
motif_pipeline/: __init__.py  _version.py
motif_pipeline/core/: __init__.py  analysis.py
motif_pipeline/io/: __init__.py  fastq.py
motif_pipeline/pipeline/: __init__.py  cli.py  driver.py
motif_pipeline/qc/: __init__.py  filters.py
motif_pipeline/stats/: __init__.py  genotype.py  hierarchical.py  signatures.py  strand.py
motif_pipeline/utils/: __init__.py  summary.py
motif_pipeline/viz/: __init__.py  pileup.py  plots.py
tests/: test_pileup.py  test_smoke.py
